kanban-kubectl/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
spec:
  rules:
    - host: adminer.k8s.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: adminer
                port:
                  number: 8080
    - host: kanban.k8s.com
      http:
        paths:
          - pathType: Prefix
            path: /api/
            backend:
              service:
                name: kanban-app
                port:
                  number: 8080
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kanban-ui
                port:
                  number: 80
